--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,42 +29,43 @@ message(STATUS "C++ Compiler ID: ${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "C++ Compiler Version: ${CMAKE_CXX_COMPILER_VERSION}")
 
 # list files to be compiled
-file(GLOB_RECURSE SOURCES
+file(GLOB_RECURSE sources
     ${PROJECT_SOURCE_DIR}/src/*.c*
     ${PROJECT_SOURCE_DIR}/test/*.c*
 )
-file(GLOB_RECURSE HEADERS
+file(GLOB_RECURSE headers
     ${PROJECT_SOURCE_DIR}/src/*.h*
     ${PROJECT_SOURCE_DIR}/test/*.h*
 )
-file(GLOB_RECURSE QT_WIDGETS_UIS
+file(GLOB_RECURSE Qt_Widgets_UIs
     ${PROJECT_SOURCE_DIR}/src/*.ui
     ${PROJECT_SOURCE_DIR}/test/*.ui
 )
 
 # set variables
-set(CODE_FILES
-    ${SOURCES}
-    ${HEADERS}
-    ${QT_WIDGETS_UIS}
+set(code_files
+    ${sources}
+    ${headers}
+    ${Qt_Widgets_UIs}
 )
-set(TS_FILES # translation files (Qt)
+message(STATUS "Files to be compiled: ${code_files}")
+set(Qt_ts_Files # Qt translation files
     wmm_en_US.ts
 )
 set(DEP_ROOT "3rd/install/${CMAKE_CXX_COMPILER_ID}")
 
 # includes
-include_directories(appwmm PUBLIC "src")
+include_directories(wmm PUBLIC "src")
 
 # dependencies: Qt
 find_package(Qt6 6.3 COMPONENTS Core Gui Widgets Core5Compat PdfWidgets REQUIRED)
 set(Qt6_ROOT "${Qt6_DIR}/../../..")
 
-qt_add_executable(appwmm
-    ${CODE_FILES}
+qt_add_executable(wmm
+    ${code_files}
 )
 
-set_target_properties(appwmm PROPERTIES
+set_target_properties(wmm PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER sw.abr.top
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -72,11 +73,11 @@ set_target_properties(appwmm PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-target_compile_definitions(appwmm PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(appwmm PUBLIC Qt6::Core Qt6::Widgets Qt6::Core5Compat Qt6::PdfWidgets)
+target_compile_definitions(wmm PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
+target_link_libraries(wmm PUBLIC Qt6::Core Qt6::Widgets Qt6::Core5Compat Qt6::PdfWidgets)
 
 if (QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(appwmm)
+    qt_finalize_executable(wmm)
 endif ()
 
 # dependency: mongocxx
@@ -94,8 +95,8 @@ list(APPEND MONGO_LIBS ${BSON})
 list(APPEND MONGO_LIBS ${MONGOC})
 list(APPEND MONGO_LIBS ${BSONCXX})
 list(APPEND MONGO_LIBS ${MONGOCXX})
-target_link_libraries(appwmm LINK_PUBLIC ${MONGO_LIBS})
-include_directories(appwmm PUBLIC ${MONGO_INCLUDE_DIR})
+target_link_libraries(wmm LINK_PUBLIC ${MONGO_LIBS})
+include_directories(wmm PUBLIC ${MONGO_INCLUDE_DIR})
 message(STATUS "Found MongoDB dependencies: ${MONGO_LIBS}")
 
 # dependency: JSON libs
@@ -103,19 +104,19 @@ find_library(SIMDJSON simdjson "${DEP_ROOT}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/l
 list(APPEND JSON_INCLUDE_DIR "${DEP_ROOT}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
 list(APPEND JSON_INCLUDE_DIR "${DEP_ROOT}/rapidjson-1.1.0/${CMAKE_BUILD_TYPE}/include")
 list(APPEND JSON_LIBS ${SIMDJSON})
-target_link_libraries(appwmm LINK_PUBLIC ${JSON_LIBS})
-include_directories(appwmm PUBLIC ${JSON_INCLUDE_DIR})
+target_link_libraries(wmm LINK_PUBLIC ${JSON_LIBS})
+target_include_directories(wmm PUBLIC ${JSON_INCLUDE_DIR})
 message(STATUS "Found JSON dependencies: ${JSON_LIBS}")
 
 # dependency: DuckX
 find_library(DUCKX duckx "${DEP_ROOT}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/lib")
-target_link_libraries(appwmm LINK_PUBLIC ${DUCKX})
-include_directories(appwmm PUBLIC ${DEP_ROOT}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
+target_link_libraries(wmm LINK_PUBLIC ${DUCKX})
+target_include_directories(wmm PUBLIC ${DEP_ROOT}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
 message(STATUS "Found DOCX dependencies: ${DUCKX}")
 
 # post-build
 # if((${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
-#     add_custom_command(TARGET appwmm POST_BUILD
+#     add_custom_command(TARGET wmm POST_BUILD
 #         COMMAND "./post-build" -QtBinaryDir ${Qt6_ROOT}/bin -BuildDir ${PROJECT_BINARY_DIR} -BuildType ${CMAKE_BUILD_TYPE}
 #         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 #     )
