--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,12 +20,12 @@ set(code_files
 )
 # message(STATUS "Files to be compiled: ${code_files}")
 set(Qt_ts_Files # Qt translation files
-    ../wmm_en_US.ts
+    ts/*.ts
 )
-set(DEP_ROOT "../3rd/install/${CMAKE_CXX_COMPILER_ID}")
+set(dep_root "../3rd/install/${CMAKE_CXX_COMPILER_ID}")
 
 # dependencies: Qt
-set(Qt6_ROOT "${Qt6_DIR}/../../..")
+set(Qt6_root "${Qt6_DIR}/../../..")
 
 qt_add_executable(wmm
     ${code_files}
@@ -47,43 +47,43 @@ if (QT_VERSION_MAJOR EQUAL 6)
 endif ()
 
 # dependency: mongocxx
-list(APPEND MONGO_LIB_DIR "${DEP_ROOT}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/bin")
-list(APPEND MONGO_LIB_DIR "${DEP_ROOT}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND MONGO_LIB_DIR "${DEP_ROOT}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/bin")
-list(APPEND MONGO_LIB_DIR "${DEP_ROOT}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND MONGO_INCLUDE_DIR "${DEP_ROOT}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/bsoncxx/v_noabi")
-list(APPEND MONGO_INCLUDE_DIR "${DEP_ROOT}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/mongocxx/v_noabi")
-find_library(BSON bson-1.0 ${MONGO_LIB_DIR})
-find_library(MONGOC mongoc-1.0 ${MONGO_LIB_DIR})
-find_library(BSONCXX bsoncxx ${MONGO_LIB_DIR})
-find_library(MONGOCXX mongocxx ${MONGO_LIB_DIR})
-list(APPEND MONGO_LIBS ${BSON})
-list(APPEND MONGO_LIBS ${MONGOC})
-list(APPEND MONGO_LIBS ${BSONCXX})
-list(APPEND MONGO_LIBS ${MONGOCXX})
-target_link_libraries(wmm LINK_PUBLIC ${MONGO_LIBS})
-target_include_directories(wmm PUBLIC ${MONGO_INCLUDE_DIR})
-message(STATUS "Found MongoDB dependencies: ${MONGO_LIBS}")
+list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/bin")
+list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/lib")
+list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/bin")
+list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/lib")
+list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/bsoncxx/v_noabi")
+list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/mongocxx/v_noabi")
+find_library(bson bson-1.0 ${mongo_lib_dir})
+find_library(mongoc mongoc-1.0 ${mongo_lib_dir})
+find_library(bsoncxx bsoncxx ${mongo_lib_dir})
+find_library(mongocxx mongocxx ${mongo_lib_dir})
+list(APPEND mongo_libs ${bson})
+list(APPEND mongo_libs ${mongoc})
+list(APPEND mongo_libs ${bsoncxx})
+list(APPEND mongo_libs ${mongocxx})
+target_link_libraries(wmm LINK_PUBLIC ${mongo_libs})
+target_include_directories(wmm PUBLIC ${mongo_inc_dir})
+message(STATUS "Found MongoDB dependencies: ${mongo_libs}")
 
 # dependency: JSON libs
-find_library(SIMDJSON simdjson "${DEP_ROOT}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND JSON_INCLUDE_DIR "${DEP_ROOT}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
-list(APPEND JSON_INCLUDE_DIR "${DEP_ROOT}/rapidjson-1.1.0/${CMAKE_BUILD_TYPE}/include")
-list(APPEND JSON_LIBS ${SIMDJSON})
-target_link_libraries(wmm LINK_PUBLIC ${JSON_LIBS})
-target_include_directories(wmm PUBLIC ${JSON_INCLUDE_DIR})
-message(STATUS "Found JSON dependencies: ${JSON_LIBS}")
+# find_library(simdjson simdjson "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/lib")
+# list(APPEND JSON_inc_dir "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
+list(APPEND JSON_inc_dir "${dep_root}/rapidjson-1.1.0/${CMAKE_BUILD_TYPE}/include")
+list(APPEND JSON_libs ${simdjson})
+target_link_libraries(wmm LINK_PUBLIC ${JSON_libs})
+target_include_directories(wmm PUBLIC ${JSON_inc_dir})
+message(STATUS "Found JSON dependencies: ${JSON_libs}")
 
 # dependency: DuckX
-find_library(DUCKX duckx "${DEP_ROOT}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/lib")
-target_link_libraries(wmm LINK_PUBLIC ${DUCKX})
-target_include_directories(wmm PUBLIC ${DEP_ROOT}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
-message(STATUS "Found DOCX dependencies: ${DUCKX}")
+find_library(DuckX duckx "${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/lib")
+target_link_libraries(wmm LINK_PUBLIC ${DuckX})
+target_include_directories(wmm PUBLIC ${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
+message(STATUS "Found DOCX dependencies: ${DuckX}")
 
 # post-build
 # if((${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
 #     add_custom_command(TARGET wmm POST_BUILD
-#         COMMAND "./post-build" -QtBinaryDir ${Qt6_ROOT}/bin -BuildDir ${PROJECT_BINARY_DIR} -BuildType ${CMAKE_BUILD_TYPE}
+#         COMMAND "./post-build" -QtBinaryDir ${Qt6_root}/bin -BuildDir ${PROJECT_BINARY_DIR} -BuildType ${CMAKE_BUILD_TYPE}
 #         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 #     )
 # elseif((${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux") AND (${CMAKE_SYSTEM_NAME} STREQUAL "Linux"))
