--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,12 +47,14 @@ if (QT_VERSION_MAJOR EQUAL 6)
 endif ()
 
 # dependency: mongocxx
+list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/bsoncxx/v_noabi")
+list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/mongocxx/v_noabi")
+target_include_directories(wmm PUBLIC ${mongo_inc_dir})
+
 list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/bin")
 list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/lib")
 list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/bin")
 list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/bsoncxx/v_noabi")
-list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/mongocxx/v_noabi")
 find_library(bson bson-1.0 ${mongo_lib_dir})
 find_library(mongoc mongoc-1.0 ${mongo_lib_dir})
 find_library(bsoncxx bsoncxx ${mongo_lib_dir})
@@ -62,23 +64,24 @@ list(APPEND mongo_libs ${mongoc})
 list(APPEND mongo_libs ${bsoncxx})
 list(APPEND mongo_libs ${mongocxx})
 target_link_libraries(wmm LINK_PUBLIC ${mongo_libs})
-target_include_directories(wmm PUBLIC ${mongo_inc_dir})
-message(STATUS "Found MongoDB dependencies: ${mongo_libs}")
+message(STATUS "Found MongoDB libraries: ${mongo_libs}")
 
 # dependency: JSON libs
-# find_library(simdjson simdjson "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/lib")
-# list(APPEND JSON_inc_dir "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
 list(APPEND JSON_inc_dir "${dep_root}/rapidjson-1.1.0/${CMAKE_BUILD_TYPE}/include")
+# list(APPEND JSON_inc_dir "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
+target_include_directories(wmm PUBLIC ${JSON_inc_dir})
+
+# find_library(simdjson simdjson "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/lib")
 list(APPEND JSON_libs ${simdjson})
 target_link_libraries(wmm LINK_PUBLIC ${JSON_libs})
-target_include_directories(wmm PUBLIC ${JSON_inc_dir})
-message(STATUS "Found JSON dependencies: ${JSON_libs}")
+message(STATUS "Found JSON libraries: ${JSON_libs}")
 
 # dependency: DuckX
+target_include_directories(wmm PUBLIC ${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
+
 find_library(DuckX duckx "${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/lib")
 target_link_libraries(wmm LINK_PUBLIC ${DuckX})
-target_include_directories(wmm PUBLIC ${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
-message(STATUS "Found DOCX dependencies: ${DuckX}")
+message(STATUS "Found DOCX libraries: ${DuckX}")
 
 # post-build
 # if((${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
