--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,21 @@ set(code_files
 list(FILTER code_files EXCLUDE REGEX "/legacy/")
 # message(STATUS "code_files in test: ${code_files}")
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# dependency: GoogleTest
+list(APPEND CMAKE_PREFIX_PATH "../3rd/install/${CMAKE_CXX_COMPILER_ID}/googletest-release-1.12.1/${CMAKE_BUILD_TYPE}")
+find_package(GTest CONFIG REQUIRED)
+
+enable_testing()
+
+add_executable(wmmtest
+    ${code_files}
+)
+set_target_properties(wmmtest PROPERTIES
+    MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" # C/C++ > Code Generation > Runtime Library = /MTd instead of default /MDd
+)
+
+target_link_libraries(wmmtest GTest::gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(wmmtest)
