--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,14 +21,19 @@ find_package(GTest CONFIG REQUIRED)
 
 enable_testing()
 
-add_executable(wmmtest
+qt_add_executable(wmmtest
     ${code_files}
 )
 set_target_properties(wmmtest PROPERTIES
     MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" # C/C++ > Code Generation > Runtime Library = /MTd instead of default /MDd
+    MACOSX_BUNDLE_GUI_IDENTIFIER sw.abr.top
+    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE TRUE
+    # WIN32_EXECUTABLE TRUE
 )
-
+target_compile_definitions(wmmtest PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(wmmtest PUBLIC GTest::gtest_main Qt6::Core)
 
 include(GoogleTest)
-gtest_discover_tests(wmmtest)
+# gtest_discover_tests(wmmtest)
