--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,13 +15,11 @@ set(code_files
     ${headers}
     ${Qt_Widgets_UIs}
 )
-# message(STATUS "code_files in src: ${code_files}")
 set(Qt_ts_Files # Qt translation files
     ts/*.ts
 )
 
-# dependencies: Qt
-set(Qt6_root "${Qt6_DIR}/../../..")
+# dependency: Qt
 qt_add_executable(wmm
     ${code_files}
 )
@@ -33,48 +31,24 @@ set_target_properties(wmm PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 target_compile_definitions(wmm PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(wmm PUBLIC Qt6::Core Qt6::Widgets Qt6::Core5Compat Qt6::PdfWidgets)
 
 if (QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(wmm)
 endif ()
 
-# dependency: mongocxx
-list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/bsoncxx/v_noabi")
-list(APPEND mongo_inc_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/include/mongocxx/v_noabi")
-target_include_directories(wmm PUBLIC ${mongo_inc_dir})
-
-list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/bin")
-list(APPEND mongo_lib_dir "${dep_root}/mongo-c-driver-1.22.1/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/bin")
-list(APPEND mongo_lib_dir "${dep_root}/mongo-cxx-driver-r3.6.7/${CMAKE_BUILD_TYPE}/lib")
-find_library(bson bson-1.0 ${mongo_lib_dir})
-find_library(mongoc mongoc-1.0 ${mongo_lib_dir})
-find_library(bsoncxx bsoncxx ${mongo_lib_dir})
-find_library(mongocxx mongocxx ${mongo_lib_dir})
-list(APPEND mongo_libs ${bson})
-list(APPEND mongo_libs ${mongoc})
-list(APPEND mongo_libs ${bsoncxx})
-list(APPEND mongo_libs ${mongocxx})
-target_link_libraries(wmm PUBLIC ${mongo_libs})
-message(STATUS "Found MongoDB libraries: ${mongo_libs}")
-
-# dependency: JSON libs
-list(APPEND JSON_inc_dir "${dep_root}/rapidjson-1.1.0/${CMAKE_BUILD_TYPE}/include")
-# list(APPEND JSON_inc_dir "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/include")
-target_include_directories(wmm PUBLIC ${JSON_inc_dir})
-
-# find_library(simdjson simdjson "${dep_root}/simdjson-1.0.2/${CMAKE_BUILD_TYPE}/lib")
-list(APPEND JSON_libs ${simdjson})
-target_link_libraries(wmm PUBLIC ${JSON_libs})
-message(STATUS "Found JSON libraries: ${JSON_libs}")
-
 # dependency: DuckX
-target_include_directories(wmm PUBLIC ${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include)
-
 find_library(DuckX duckx "${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/lib")
-target_link_libraries(wmm PUBLIC ${DuckX})
-message(STATUS "Found DOCX libraries: ${DuckX}")
+
+target_include_directories(wmm PUBLIC
+    ${JSON_inc_dir}
+    ${mongo_inc_dir}
+    ${dep_root}/duckx-1.2.2/${CMAKE_BUILD_TYPE}/include
+)
+target_link_libraries(wmm PUBLIC
+    ${mongo_libs}
+    ${DuckX}
+    Qt6::Core Qt6::Widgets Qt6::Core5Compat Qt6::PdfWidgets
+)
 
 # post-build
 # if((${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
