--- a/test/qt/CMakeLists.txt
+++ b/test/qt/CMakeLists.txt
@@ -11,10 +11,23 @@ file(GLOB_RECURSE cat2-sources
 file(GLOB_RECURSE cat2-headers
     cat2/*.h*
 )
-file(GLOB modules_to_be_tested
+file(GLOB cat1-modules-to-be-tested
     ${wmm_root}/src/TreeView.cpp
     ${wmm_root}/src/TextArea.cpp
     ${wmm_root}/src/global.cpp
+)
+file(GLOB cat2-modules-to-be-tested
+    ${wmm_root}/src/TreeView.cpp
+    ${wmm_root}/src/TextArea.cpp
+    ${wmm_root}/src/global.cpp
+    ${wmm_root}/src/TreeEditor.cpp
+    ${wmm_root}/src/QtTreeModel.cpp
+    ${wmm_root}/src/Algorithm.cpp
+    ${wmm_root}/src/JSONFormatter.cpp
+    ${wmm_root}/src/TextFormatter.cpp
+    ${wmm_root}/src/JSONHighlighter.cpp
+    ${wmm_root}/src/TextHighlighter.cpp
+    ${wmm_root}/src/FileSystemAccessor.cpp
 )
 
 # dependency: Qt
@@ -23,12 +36,12 @@ find_package(Qt6 6.3 COMPONENTS Test REQUIRED)
 qt_add_executable(wmmqtest-cat1
     ${cat1-sources}
     ${cat1-headers}
-    ${modules_to_be_tested}
+    ${cat1-modules-to-be-tested}
 )
 qt_add_executable(wmmqtest-cat2
     ${cat2-sources}
     ${cat2-headers}
-    ${modules_to_be_tested}
+    ${cat2-modules-to-be-tested}
 )
 
 set_target_properties(wmmqtest-cat1 PROPERTIES
@@ -39,6 +52,7 @@ target_compile_definitions(wmmqtest-cat1 PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:
 
 target_include_directories(wmmqtest-cat1 PUBLIC
     ${wmm_root}
+    ${wmm_root}/src
     ${wmm_root}/test
     ${JSON_inc_dir}     # dependency: JSON libs
     ${mongo_inc_dir}    # dependency: mongo libs
@@ -55,10 +69,11 @@ target_compile_definitions(wmmqtest-cat2 PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:
 
 target_include_directories(wmmqtest-cat2 PUBLIC
     ${wmm_root}
+    ${wmm_root}/src
     ${wmm_root}/test
     ${JSON_inc_dir}     # dependency: JSON libs
     ${mongo_inc_dir}    # dependency: mongo libs
 )
 target_link_libraries(wmmqtest-cat2 PUBLIC
-    Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Test
+    Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Test Qt6::Core5Compat
 )
