--- a/test/qt/CMakeLists.txt
+++ b/test/qt/CMakeLists.txt
@@ -11,6 +11,12 @@ file(GLOB_RECURSE cat2-sources
 file(GLOB_RECURSE cat2-headers
     cat2/*.h*
 )
+file(GLOB_RECURSE cat3-sources
+    cat3/*.c*
+)
+file(GLOB_RECURSE cat3-headers
+    cat3/*.h*
+)
 file(GLOB cat1-modules-to-be-tested
     ${wmm_root}/src/global.cpp
     ${wmm_root}/src/TextArea.cpp
@@ -29,6 +35,9 @@ file(GLOB cat2-modules-to-be-tested
     ${wmm_root}/src/TreeEditor.cpp
     ${wmm_root}/src/TreeView.cpp
 )
+file(GLOB cat3-modules-to-be-tested
+    ${wmm_root}/src/MongoDBConsole.cpp
+)
 
 # dependency: Qt
 find_package(Qt6 6.4 COMPONENTS Test REQUIRED)
@@ -42,6 +51,11 @@ qt_add_executable(wmmqtest-cat2
     ${cat2-sources}
     ${cat2-headers}
     ${cat2-modules-to-be-tested}
+)
+qt_add_executable(wmmqtest-cat3
+    ${cat3-sources}
+    ${cat3-headers}
+    ${cat3-modules-to-be-tested}
 )
 
 set_target_properties(wmmqtest-cat1 PROPERTIES
@@ -76,4 +90,21 @@ target_include_directories(wmmqtest-cat2 PUBLIC
 )
 target_link_libraries(wmmqtest-cat2 PUBLIC
     Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Test Qt6::Core5Compat
+)
+
+set_target_properties(wmmqtest-cat3 PROPERTIES
+    # WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
+target_compile_definitions(wmmqtest-cat3 PUBLIC $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
+
+target_include_directories(wmmqtest-cat3 PUBLIC
+    ${wmm_root}
+    ${wmm_root}/src
+    ${wmm_root}/test
+    ${JSON_inc_dir}     # dependency: JSON libs
+    ${mongo_inc_dir}    # dependency: mongo libs
+)
+target_link_libraries(wmmqtest-cat3 PUBLIC
+    Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Test
 )
